# anime-recommender

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
config/: config.yaml
notebooks/: explore.ipynb
src/: __init__.py
src/common/: config.py  config_entity.py  constants.py  custom_exception.py  logger.py
src/components/: data_transformation.py  recommender.py  vector_store.py
src/pipeline/: create_vector_store.py  recommender_pipeline.py
